--- a/volDB/static/css/style.css
+++ b/volDB/static/css/style.css
@@ -15,12 +15,12 @@ a, p, h5 {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 a:hover {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 .form-control {
